--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,11 @@
     <string name="successful_registration">Registration is successful</string>
     <string name="registration_failed">Failed to register. Try again</string>
     <string name="login_failed">"Failed to login. Please check your email and password"</string>
+    <string name="successful_login">"Welcome back!"</string>
+    <string name="permission_denied">"To track your location please allow the app to use GPS"</string>
+
+    <!-- Alert dialog -->
+    <string name="no_gps_alert_message">"The application requires GPS to work properly. Do you want to enable it?"</string>
+    <string name="settings">"Settings"</string>
+    <string name="cancel">"Cancel"</string>
 </resources>
