--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="login_underlined"><u>Log in</u></string>
     <string name="sign_up_underlined"><u>Sign Up</u></string>
     <string name="register_uppercase">REGISTER</string>
+    <string name="reset_password_uppercase">RESET PASSWORD</string>
 
     <string name="user_name">User Name</string>
     <string name="email">Email</string>
@@ -29,10 +30,15 @@
     <string name="registration_failed">Failed to register. Try again</string>
     <string name="login_failed">"Failed to login. Please check your email and password"</string>
     <string name="successful_login">"Welcome back!"</string>
+    <string name="reset_failed">"Failed to reset password. Please check your email"</string>
+    <string name="successful_reset">"Check your email to reset your password"</string>
     <string name="permission_denied">"To track your location please allow the app to use GPS"</string>
 
     <!-- Alert dialog -->
     <string name="no_gps_alert_message">"The application requires GPS to work properly. Do you want to enable it?"</string>
     <string name="settings">"Settings"</string>
     <string name="cancel">"Cancel"</string>
+
+    <!-- Notification -->
+    <string name="service_running">"Location service is running."</string>
 </resources>
