Create worker for sending locations, implement logout logic, improve data layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,13 @@
     <string name="settings">"Settings"</string>
     <string name="cancel">"Cancel"</string>
 
+    <!-- FragmentDialog -->
+    <string name="db_not_empty_alert_message">There are some unsent locations. Send them now or delete permanently?</string>
+    <string name="delete_uppercase">DELETE</string>
+    <string name="send_uppercase">SEND</string>
+    <string name="failed_to_send_alert_message">Failed to send. Do you want to delete them and logout?</string>
+    <string name="logout_uppercase">LOGOUT</string>
+
     <!-- Notification -->
     <string name="service_running">"Location service is running."</string>
 </resources>
