--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
 
     <!-- Notification -->
     <string name="service_running">"Location service is running."</string>
+    <string name="gps_status_is">GPS is</string>
 </resources>
