Bug fix, set different icons and labels for activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">Location Tracker A</string>
-    <string name="app_name_short">Location Tracker</string>
+    <string name="app_name">Location Tracker</string>
+    <string name="app_name_a">Location Tracker A</string>
+    <string name="app_name_b">Location Tracker B</string>
 
     <string name="login_uppercase">LOG IN</string>
     <string name="login_underlined"><u>Log in</u></string>
