--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,10 @@
     <string name="select_end_date">Select end date</string>
     <string name="select_start_date">Select start date</string>
 
+    <!-- Service -->
+    <string name="service_description">Service that tracks your location</string>
+    <string name="service_label">Location Service</string>
+
     <!-- Errors -->
     <string name="empty_field">This field cannot be empty</string>
     <string name="invalid_email">Not a valid email</string>
